        * rot_get_conf deprecated and replaced by rot_get_conf2
        * Asynchronous rig data output handling to support transceive and spectrum data. Mikael, OH3BHX
        * Multicast UDP packet output for asynchronous data. Mikael, OH3BHX
        * Rig state poll routine to serve commonly used data like frequency and mode from cache. Mikael, OH3BHX

Version 4.5
        * 202?-??-??
        * New rig_get_conf2 to replace rig_get_conf buffer overflow potential
        * New rot_get_conf2 to reaplce rot_get_conf buffer overflow potential
        * Added Barrett 4050 -- not functional yet
        * Added TCI 1.X -- not functional yet
        * Added TM-V71(A)
        * Added IC-F8101
        * Added JRC JST-145 and JST-245
        * Added Xiegu X108G, G90, and X6100
        * Added CODAN Envoy and NGS
        * Added Lab599 TX-500
        * Deprecated: rigctl commands \set_trn (A) and \get_trn (a) as they never worked as intended
        * Deprecated: field rig_caps.transceive and RIG_TRN_* macros

Version 4.4
        * 2021-12-02
        * Icom rigs now default filter 2 when setting PKTUSB but user can override 
        * Fix FTDX9000 meter readings
        * Add Android sensor as a rotator
        * Added rig_get_vfo to some Icom rigs that have XCHG or 0x25 command capability
        * Added ability to build hamlib with docker
        * Added M0NKA mcHF URP rig
        * Faster serial i/o noticeable on higher baud rates
        * IC7300/9700/7800/785x set_clock/get_clock routines added -- no auto set yet
        * Yaesu FT1200/891/991/DX10/DX101/DX101MP set_clock/get_clock routines added

Version 4.3.1
        * 2021-09-14
        * Bug fix release
            - Do not do vfo_fixup on satmode rigs
            - Fix compilation of misc.c with gmtime_r replacement function for
              mingw
            - Fix python build.  For some reason casting tp vfo_t in the
              RIG_VFO_N macro broke the swig parsing