@@ -76,8 +76,8 @@ const struct rig_caps frg9600_caps =
     .retry =              0,
     .has_get_func =       RIG_FUNC_NONE,
     .has_set_func =       RIG_FUNC_NONE,
-    .has_get_level =      RIG_LEVEL_NONE,
-    .has_set_level =      RIG_LEVEL_NONE,
+    .has_get_level =      RIG_LEVEL_BAND_SELECT,
+    .has_set_level =      RIG_LEVEL_BAND_SELECT,
     .has_get_parm =       RIG_PARM_NONE,
     .has_set_parm =       RIG_PARM_NONE,
     .vfo_ops =        RIG_OP_NONE,
