@@ -334,7 +334,7 @@ const struct rig_caps ft1000mp_caps =
     .has_get_func =       FT1000MP_FUNC_ALL,
     .has_set_func =       FT1000MP_FUNC_ALL,
     .has_get_level =      FT1000MP_LEVEL_GET,
-    .has_set_level =      RIG_LEVEL_NONE, /* as strange as it could be */
+    .has_set_level =      RIG_LEVEL_BAND_SELECT, /* as strange as it could be */
     .has_get_parm =       RIG_PARM_NONE,
     .has_set_parm =       RIG_PARM_NONE,
     .ctcss_list =         ft1000mp_ctcss_list,
@@ -470,7 +470,7 @@ const struct rig_caps ft1000mpmkv_caps =
     .has_get_func =       FT1000MP_FUNC_ALL,
     .has_set_func =       FT1000MP_FUNC_ALL,
     .has_get_level =      FT1000MP_LEVEL_GET,
-    .has_set_level =      RIG_LEVEL_NONE, /* as strange as it could be */
+    .has_set_level =      RIG_LEVEL_BAND_SELECT, /* as strange as it could be */
     .has_get_parm =       RIG_PARM_NONE,
     .has_set_parm =       RIG_PARM_NONE,
     .ctcss_list =         ft1000mp_ctcss_list,
@@ -605,7 +605,7 @@ const struct rig_caps ft1000mpmkvfld_caps =
     .has_get_func =       FT1000MP_FUNC_ALL,
     .has_set_func =       FT1000MP_FUNC_ALL,
     .has_get_level =      FT1000MP_LEVEL_GET,
-    .has_set_level =      RIG_LEVEL_NONE, /* as strange as it could be */
+    .has_set_level =      RIG_LEVEL_BAND_SELECT, /* as strange as it could be */
     .has_get_parm =       RIG_PARM_NONE,
     .has_set_parm =       RIG_PARM_NONE,
     .ctcss_list =         ft1000mp_ctcss_list,
