@@ -63,7 +63,8 @@
                 RIG_LEVEL_MICGAIN|RIG_LEVEL_IF|RIG_LEVEL_CWPITCH|\
                 RIG_LEVEL_KEYSPD|RIG_LEVEL_AF|RIG_LEVEL_AGC|\
                 RIG_LEVEL_METER|RIG_LEVEL_BKINDL|RIG_LEVEL_SQL|\
-                RIG_LEVEL_VOXGAIN|RIG_LEVEL_VOXDELAY)
+                RIG_LEVEL_VOXGAIN|RIG_LEVEL_VOXDELAY|\
+                RIG_LEVEL_BAND_SELECT)
 
 #define FT450_FUNCS  (RIG_FUNC_TONE|RIG_FUNC_TSQL|RIG_FUNC_LOCK|\
                 RIG_FUNC_MON|RIG_FUNC_NB|RIG_FUNC_NR|RIG_FUNC_VOX|\
