@@ -260,7 +260,7 @@ const struct rig_caps ft600_caps =
     .has_get_func =   RIG_FUNC_NONE,
     .has_set_func =   RIG_FUNC_NONE,
     .has_get_level =  FT600_GET_RIG_LEVELS,
-    .has_set_level =  RIG_LEVEL_NONE,
+    .has_set_level =  RIG_LEVEL_BAND_SELECT,
     .has_get_parm =   RIG_PARM_NONE,
     .has_set_parm =   RIG_PARM_NONE,  /* FIXME: parms */
     .level_gran =     {},     /* granularity */
