@@ -136,8 +136,8 @@ const struct rig_caps ft757gx_caps =
     .retry =        10,
     .has_get_func =     RIG_FUNC_NONE,
     .has_set_func =     RIG_FUNC_NONE,
-    .has_get_level =    RIG_LEVEL_NONE,
-    .has_set_level =    RIG_LEVEL_NONE,
+    .has_get_level =    RIG_LEVEL_BAND_SELECT,
+    .has_set_level =    RIG_LEVEL_BAND_SELECT,
     .has_get_parm =     RIG_PARM_NONE,
     .has_set_parm =     RIG_PARM_NONE,
     .ctcss_list =       NULL,
@@ -249,7 +249,7 @@ const struct rig_caps ft757gx2_caps =
     .has_get_func =     RIG_FUNC_LOCK,
     .has_set_func =     RIG_FUNC_LOCK,
     .has_get_level =    RIG_LEVEL_RAWSTR,
-    .has_set_level =    RIG_LEVEL_NONE,
+    .has_set_level =    RIG_LEVEL_BAND_SELECT,
     .has_get_parm =     RIG_PARM_NONE,
     .has_set_parm =     RIG_PARM_NONE,
     .vfo_ops =      RIG_OP_CPY | RIG_OP_FROM_VFO | RIG_OP_TO_VFO |
