@@ -283,8 +283,8 @@ const struct rig_caps ft767gx_caps =
     .retry =             0,
     .has_get_func =      RIG_FUNC_NONE,
     .has_set_func =      RIG_FUNC_NONE,
-    .has_get_level =     RIG_LEVEL_NONE,
-    .has_set_level =     RIG_LEVEL_NONE,
+    .has_get_level =     RIG_LEVEL_BAND_SELECT,
+    .has_set_level =     RIG_LEVEL_BAND_SELECT,
     .has_get_parm =      RIG_PARM_NONE,
     .has_set_parm =      RIG_PARM_NONE,
     .ctcss_list =        static_767gx_ctcss_list,
