@@ -401,7 +401,7 @@ const struct rig_caps ft847_caps =
     .has_get_func =  RIG_FUNC_NONE,
     .has_set_func =  FT847_FUNC_ALL,
     .has_get_level =  FT847_LEVEL_ALL,
-    .has_set_level =  RIG_LEVEL_NONE,
+    .has_set_level =  RIG_LEVEL_BAND_SELECT,
     .has_get_parm =  RIG_PARM_NONE,
     .has_set_parm =  RIG_PARM_NONE,
     .level_gran =  {},      /* granularity */
@@ -551,7 +551,7 @@ const struct rig_caps mchfqrp_caps =
     .has_get_func =  RIG_FUNC_NONE,
     .has_set_func =  FT847_FUNC_ALL,
     .has_get_level =  FT847_LEVEL_ALL,
-    .has_set_level =  RIG_LEVEL_NONE,
+    .has_set_level =  RIG_LEVEL_BAND_SELECT,
     .has_get_parm =  RIG_PARM_NONE,
     .has_set_parm =  RIG_PARM_NONE,
     .level_gran =  {},      /* granularity */
@@ -707,7 +707,7 @@ const struct rig_caps ft847uni_caps =
     .has_get_func =  RIG_FUNC_NONE,
     .has_set_func =  FT847_FUNC_ALL,
     .has_get_level =  FT847_LEVEL_ALL,
-    .has_set_level =  RIG_LEVEL_NONE,
+    .has_set_level =  RIG_LEVEL_BAND_SELECT,
     .has_get_parm =  RIG_PARM_NONE,
     .has_set_parm =  RIG_PARM_NONE,
     .level_gran =  {},      /* granularity */
