@@ -273,7 +273,7 @@ const struct rig_caps ft857_caps =
     .has_get_func =       RIG_FUNC_NONE,
     .has_set_func =   RIG_FUNC_LOCK | RIG_FUNC_TONE | RIG_FUNC_TSQL,
     .has_get_level =  RIG_LEVEL_STRENGTH | RIG_LEVEL_RFPOWER,
-    .has_set_level =  RIG_LEVEL_NONE,
+    .has_set_level =  RIG_LEVEL_BAND_SELECT,
     .has_get_parm =   RIG_PARM_NONE,
     .has_set_parm =   RIG_PARM_NONE,
     .level_gran =     {},                     /* granularity */
