@@ -443,7 +443,7 @@ const struct rig_caps ft900_caps =
     .has_get_func =       RIG_FUNC_TUNER,
     .has_set_func =       RIG_FUNC_TUNER,
     .has_get_level =      RIG_LEVEL_STRENGTH,
-    .has_set_level =      RIG_LEVEL_NONE,
+    .has_set_level =      RIG_LEVEL_BAND_SELECT,
     .has_get_parm =       RIG_PARM_NONE,
     .has_set_parm =       RIG_PARM_NONE,
     .ctcss_list =         NULL,
