@@ -239,7 +239,7 @@ const struct rig_caps vx1700_caps =
 
     .has_get_func = (RIG_FUNC_LOCK | RIG_FUNC_TUNER),
     .has_set_func =  RIG_FUNC_NONE,
-    .has_get_level =  RIG_LEVEL_NONE,
+    .has_get_level =  RIG_LEVEL_BAND_SELECT,
     .has_set_level =  RIG_LEVEL_RFPOWER,
     .has_get_parm =  RIG_PARM_NONE,
     .has_set_parm =  RIG_PARM_NONE,
