@@ -924,6 +924,7 @@ static const struct
     { RIG_LEVEL_SPECTRUM_AVG, "SPECTRUM_AVG" },
     { RIG_LEVEL_SPECTRUM_ATT, "SPECTRUM_ATT" },
     { RIG_LEVEL_TEMP_METER, "TEMP_METER" },
+    { RIG_LEVEL_BAND_SELECT, "BAND_SELECT" },
     { RIG_LEVEL_NONE, "" },
 };
 
